--- a/index.html
+++ b/index.html
@@ -30,7 +30,27 @@
             </div>
         </div>
     </div>
-    <div class="info"></div>
+    <div class="info">
+        <p class="info-title">Some random information.</p>
+        <div class="info-divs">
+            <div class="info-subtext">
+                <div class="info-subtext-div"></div>
+                <p class="info-subtext-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-subtext">
+                <div class="info-subtext-div"></div>
+                <p class="info-subtext-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-subtext">
+                <div class="info-subtext-div"></div>
+                <p class="info-subtext-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-subtext">
+                <div class="info-subtext-div"></div>
+                <p class="info-subtext-text">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
     <div class="quote"></div>
     <div class="sign-up"></div>
     <div class="footer"></div>
