--- a/index.html
+++ b/index.html
@@ -51,8 +51,21 @@
             </div>
         </div>
     </div>
-    <div class="quote"></div>
-    <div class="sign-up"></div>
+    <div class="quote">
+        <div class="quote-text">
+            <p class="quote-quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote-author">-Thor, Gog of Thunder</p>
+        </div>
+    </div>
+    <div class="sign-up">
+        <div class="sign-up-div">
+            <div class="sign-up-text">
+                <p class="call-to-action">Call to action! It's time!</p>
+                <p class="call-to-action-subtext">Sign up for out product by clikcing that button right over there!</p>
+            </div>
+            <button class="sign-up-btn" id="btn-bottom">Sign up</button>
+        </div>
+    </div>
     <div class="footer"></div>
 </body>
 </html>
