--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             <button class="sign-up-btn" id="btn-bottom">Sign up</button>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <p class="footer-text">Copyright &copy; The Odin Project 2023</p>
+    </div>
 </body>
 </html>
